Add Reset Game button and style; allow full game and score reset

--- a/index.html
+++ b/index.html
@@ -79,9 +79,17 @@
       <!-- Enhanced controls with better button design -->
       <footer class="controls">
         <button
-          id="resetBtn"
+          id="restartBtn"
           class="btn btn-primary"
           aria-label="Reset the game"
+        >
+          <span class="btn-icon">🔄</span>
+          <span class="btn-text">Restart Game</span>
+        </button>
+        <button
+          id="resetAllBtn"
+          class="btn btn-secondary"
+          aria-label="Reset the whole game and scores"
         >
           <span class="btn-icon">🔄</span>
           <span class="btn-text">Reset Game</span>
